summary page: added item count, default page 50
